--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
     "author": "Pan <panfree23@gmail.com>",
     "scripts": {
-        "dev": "vue-cli-service serve",
+        "serve_dev": "vue-cli-service serve --mode development",
+        "serve_prod": "vue-cli-service serve --mode production",
+        "serve_huawei": "vue-cli-service serve --mode huawei",
         "build_dev": "vue-cli-service build --mode development",
-        "build:prod": "vue-cli-service build",
+        "build_prod": "vue-cli-service build --mode production",
+        "build_huawei": "vue-cli-service build --mode huawei",
         "build:stage": "vue-cli-service build --mode staging",
         "preview": "node build/index.js --preview",
         "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
